# fipml

./: .gitignore  README.md  dune-project  fipml.opam
src/: binary-tree-traversal.fipml  dune  example2_5.fipml  fip.byte  fip.cmi  fip.cmo  ftree-fip.fipml  list-map.fipml  main.fipml  main.ml  merge-sort.fipml  pattern_matching.fipml  poly.fipml  red-black-trees.fipml
src/experiments/msort/: debug.txt  fip.cmi  fip.cmo  fip.cmx  fipml_msort.byte  msort-fip  msort-fip-o3  msort.byte  msort.cmi  msort.cmo  msort.cmx  msort.fipml  msort.kk  msort.ml  output.s
src/experiments/qsort/: fip.byte  fip.cmo  fip.cmx  qsort.fipml  qsort.kk  qsort.ml
src/experiments/rbtree/: rbtree.byte  rbtree.cmo  rbtree.kk  rbtree.ml  red-black-trees.fipml
src/experiments/tmap/: binary-tree-traversal.fipml  fip.cmx  tmap.c  tmap.fipml  tmap.kk  tmap.ml
src/frontend/: ast_types.ml  ast_types.mli  dune  lex_and_parse.ml  lex_and_parse.mli  lexer.mll  parser.mly
src/frontend/ast/: ast_types.ml  ast_types.mli  dune  pprint_ast_types.ml  (+1 more)
src/frontend/typing/: borrowed_context.mli  construct_typed_ast.ml  construct_typed_ast.mli  dune  fbip_rules_check.ml  fbip_rules_check.mli  fip_ast.ml  fip_ast.mli  fip_rules_check.ml  fip_rules_check.mli  functions_env.ml  functions_env.mli  owned_context.ml  owned_context.mli  pprint_fip_ast.ml  pprint_fip_ast.mli  pprint_pretyped_ast.ml  pprint_pretyped_ast.mli  pprint_type_infer.ml  pprint_type_infer.mli  pprint_typed_ast.ml  pprint_typed_ast.mli  pretyped_ast.ml  pretyped_ast.mli  reuse_credits.ml  reuse_credits.mli  static_fbip.ml  static_fbip.mli  static_fip.ml  static_fip.mli  type_context_env.ml  type_context_env.mli  type_defns_env.ml  type_defns_env.mli  type_envs.ml  type_envs.mli  type_infer.ml  type_infer.mli  type_infer_constraints_generator.ml  type_infer_constraints_generator.mli  (+14 more)
(+114 files in other folders)
