(lang dune 3.11)

(name fipml)

(generate_opam_files true)

(source
 (github StefanPitur/fipml))

(authors "Stefan - Alexandru Pitur")

(maintainers "Stefan - Alexandru Pitur")

(license LICENSE)

(documentation https://url/to/documentation)

(package
 (name fipml)
 (synopsis "Fully In-Place Updates in Functional Programming")
 (depends ocaml dune)
)

; See the complete stanza docs at https://dune.readthedocs.io/en/stable/dune-files.html#dune-project
