(library
 (name typing)
 (modules
  pretyped_ast
  typed_ast
  typecheck_program
  typecheck_type_defns
  typecheck_functions_defns
  type_defns_env
  pprint_typed_ast
  type_context_env
  type_infer
  type_infer_types
  type_infer_constraints_generator
  type_infer_constraints_unification
  functions_env
  pprint_type_infer
  pprint_pretyped_ast)
 (libraries core ast parsing))
